# dangerous-strangers

./: .gitignore  LICENSE  README.md  json_loader.py  pyproject.toml
dangerousstrangers/: archetype.py  archetypes.json  archetypes_example.json  archetypes_mock.json  archetypes_schema.json  archetypes_template.json  background.json  background.py  backgrounds.json  backgrounds_mock.json  backgrounds_schema.json  backgrounds_template.json  character.py  character_builder.py  dangerousstrangers.py  json_loader.py  names.json  names_schema.json  race.py  races.json  races_mock.json  races_schema.json  races_template.json  run_dangerousstrangers.py  test.json  test_archetype.py  test_background.py  test_dangerousstrangers.py  test_json_loader.py  test_race.py  tests_mock.json
docs/: outline.md
